--- a/hw2/index.html
+++ b/hw2/index.html
@@ -167,7 +167,7 @@
 
 		<figure>
 			<img src="4_drawing_2.PNG" alt="flipped edge implementation" style="width:100%"/>
-			<figcaption>Illustration of our flip edge implementation.</figcaption>
+			<figcaption>Illustration of our edge flip implementation.</figcaption>
 		</figure>
 
 		<p><b>Screenshots of a mesh before and after some edge flips: </b></p>
@@ -176,21 +176,21 @@
 			  <tr>
 				<td style="text-align: center;">
 				  <img src="empty_teapot.png" width="400px"/>
-				  <figcaption></figcaption>
+				  <figcaption>Teapot before any edge flips.</figcaption>
 				</td>
 				<td style="text-align: center;">
 				  <img src="4_flip_teapot_1.png" width="400px"/>
-				  <figcaption></figcaption>
+				  <figcaption>First round of edge flips.</figcaption>
 				</td>
 			  </tr>
 			  <tr>
 				<td style="text-align: center;">
 				  <img src="4_flip_teapot_2.png" width="400px"/>
-				  <figcaption></figcaption>
+				  <figcaption>Second round of edge flips.</figcaption>
 				</td>
 				<td style="text-align: center;">
 				  <img src="4_flip_teapot_3.png" width="400px"/>
-				  <figcaption></figcaption>
+				  <figcaption>Shifted perspective after two rounds of edge flips.</figcaption>
 				</td>
 			  </tr>
 			</table>
