minor diagram change

--- a/hw2/index.html
+++ b/hw2/index.html
@@ -166,7 +166,7 @@
 		</figure>
 
 		<figure>
-			<img src="4_drawing_new.png" alt="flipped edge implementation" style="width:100%"/>
+			<img src="4_drawing_newest.png" alt="flipped edge implementation" style="width:100%"/>
 			<figcaption>Illustration of our edge flip implementation.</figcaption>
 		</figure>
 
