--- a/hw3/index.html
+++ b/hw3/index.html
@@ -51,7 +51,11 @@
 		<p><b>Ray generation and primitive intersection parts of the rendering pipeline:</b></p>
 
 		<p>The Camera::generate_ray(...) function begins by converting hFov and vFov from radians to degrees. Next, we construct a transformation matrix to map points from image space to camera space:
-		<table> <tr> <td>2 * tan(0.5 * hFov_rad)</td><td>0</td><td>-tan(0.5 * hFov_rad)</td> </tr> <tr> <td>0</td><td>2 * tan(0.5 * vFov_rad)</td><td>-tan(0.5 * vFov_rad)</td> </tr> <tr> <td>0</td><td>0</td><td>1</td> </tr> </table>
+			<span>[</span>
+			<span>2 * tan(0.5 * hFov_rad)   0   -tan(0.5 * hFov_rad)</span>
+			<span>0   2 * tan(0.5 * vFov_rad)   -tan(0.5 * vFov_rad)</span>
+			<span>0   0   1</span>
+			<span>]</span>
 		This matrix is derived from the fact that its columns must include the u and v vectors along the camera space plane as well as the origin of the camera space plane.
 		Since all points in camera space have a z coordinate of -1, we explicitly set this value after performing the 2D transformation of the normalized x and y coordinates.
 		Next, we construct a ray in camera space using the transformed coordinates and the camera origin. We then apply the c2w transformation to convert both the origin and direction into world space, effectively generating a ray in world space. Finally, we initialize the ray's min_t and max_t values to nClip and fClip, respectively, and return the constructed ray.
