--- a/hw3/index.html
+++ b/hw3/index.html
@@ -50,7 +50,7 @@
 		<h2>Part 1: Ray Generation and Scene Intersection</h2>
 		<p><b>Ray generation and primitive intersection parts of the rendering pipeline:</b></p>
 
-		<p><b>The Camera::generate_ray(...) function</b> begins by converting <b>hFov</b> and <b>vFov</b> from radians to degrees. Next, we construct a transformation matrix to map points from image space to camera space: <b>[2 * tan(0.5 * hFov_rad) 0 -tan(0.5 * hFov_rad) 0 2 * tan(0.5 * vFov_rad) -tan(0.5 * vFov_rad) 0 0 1]</b>. This matrix is derived from the fact that its columns must include the u and v vectors along the camera space plane as well as the origin of the camera space plane. Since all points in camera space have a z coordinate of -1, we explicitly set this value after performing the 2D transformation of the normalized <b>x</b> and <b>y</b> coordinates. Next, we construct a ray in camera space using the transformed coordinates and the camera origin. We then apply the <b>c2w</b> transformation to convert both the origin and direction into world space, effectively generating a ray in world space. Finally, we initialize the ray's <b>min_t</b> and <b>max_t</b> values to <b>nClip</b> and <b>fClip</b>, respectively, and return the constructed ray.</p>
+		<p>The <b>Camera::generate_ray(...) function</b> begins by converting <b>hFov</b> and <b>vFov</b> from radians to degrees. Next, we construct a transformation matrix to map points from image space to camera space: <b>[2 * tan(0.5 * hFov_rad) 0 -tan(0.5 * hFov_rad) 0 2 * tan(0.5 * vFov_rad) -tan(0.5 * vFov_rad) 0 0 1]</b>. This matrix is derived from the fact that its columns must include the u and v vectors along the camera space plane as well as the origin of the camera space plane. Since all points in camera space have a z coordinate of -1, we explicitly set this value after performing the 2D transformation of the normalized <b>x</b> and <b>y</b> coordinates. Next, we construct a ray in camera space using the transformed coordinates and the camera origin. We then apply the <b>c2w</b> transformation to convert both the origin and direction into world space, effectively generating a ray in world space. Finally, we initialize the ray's <b>min_t</b> and <b>max_t</b> values to <b>nClip</b> and <b>fClip</b>, respectively, and return the constructed ray.</p>
 
 		<p>Next, we implemented <b>PathTracer::raytrace_pixel(...)</b>, which calls <b>PathTracer::est_radiance_global_illumination(...)</b> to estimate the integral of radiance over a specific pixel coordinate. This is done by averaging <b>ns_aa</b> samples and updating the <b>sampleBuffer</b> at that pixel location with the computed radiance integral. To achieve this, we called <b>gridSampler->get_sample()</b> <b>ns_aa</b> times. In each iteration, we added the <b>x</b> and <b>y</b> coordinates of the sample vector to the input <b>x</b> and <b>y</b>, then normalized them by <b>sampleBuffer.w</b> and <b>sampleBuffer.h</b>. These normalized coordinates were passed to <b>generate_ray()</b> to obtain a ray in world space, which was then passed to <b>est_radiance_global_illumination(...)</b> to estimate the scene radiance along the ray. Finally, we averaged the scene radiance from all <b>ns_aa</b> rays to estimate the integral of radiance over the pixel.</p>
 
@@ -83,6 +83,33 @@
 			isect->n = (1 - sol.y - sol.z) * n1 + sol.y * n2 + sol.z * n3;
 		</b></p>
 		<p>Otherwise, we simply return <b>false</b>.</p>
+
+		<p><b>The sphere intersection algorithm we implemented:</b></p>
+
+		<p>For sphere intersection, we followed a similar approach in <strong>Sphere::test(...)</strong>. We used the equation for a sphere:</p>
+		<p><strong>(p - o) ^ 2 - r² = 0</strong></p>
+		<p>Substituting <strong>p</strong> with the ray equation <strong>r(t) = o + t * d</strong>, we solved for the intersection times <strong>t</strong> using the quadratic formula, where:</p>
+		<ul>
+			<li><strong>a = dot(r.d, r.d)</strong></li>
+			<li><strong>b = 2 * dot(r.o - o, r.d)</strong></li>
+			<li><strong>c = dot(r.o - o, r.o - o) - r²</strong></li>
+		</ul>
+		<p>If <strong>b² - 4ac</strong> was negative or if both intersection times were either less than <strong>r.min_t</strong> or greater than <strong>r.max_t</strong>, we returned <strong>false</strong>. Otherwise, we computed the minimum of the two intersection times (<strong>t1</strong>) and the maximum (<strong>t2</strong>), returning <strong>true</strong>.</p>
+		
+		<p>The <strong>Sphere::has_intersection(...)</strong> function simply returns the boolean result from <strong>Sphere::test(...)</strong>.</p>
+	
+		<p>Meanwhile, <strong>Sphere::intersect(...)</strong> also performs the following assignments if at least one intersection occurs before returning the boolean value from <strong>Sphere::test(...)</strong>:</p>
+	
+		<ul>
+			<li><strong>i->t = t1;</strong></li>
+			<li><strong>If (t1 &lt; r.min_t &amp;&amp; t1 &gt; r.max_t) { i->t = t2; }</strong></li>
+			<li><strong>r.max_t = i->t;</strong></li>
+			<li><strong>Vector3D normal_vec = r.at_time(i->t) - o;</strong></li>
+			<li><strong>normal_vec.normalize();</strong></li>
+			<li><strong>i->n = normal_vec;</strong></li>
+			<li><strong>i->primitive = this;</strong></li>
+			<li><strong>i->bsdf = get_bsdf();</strong></li>
+		</ul>	
 
 
 		<p>Here is an example 2x2 gridlike structure using an HTML table. Each <b>tr</b> is a row and each <b>td</b> is a column in that row. You might find this useful for framing and showing your result images in an organized fashion.</p>
